--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Ajax Whois using InterNetX Whois Proxy v1.3</title>
+<title>WhoisNinja v1.3</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style type="text/css">
@@ -62,9 +62,9 @@ h1{font-family: Arial,Tahoma,Verdana,sans-serif;font-size:30px}
 
 <b>WhoisNinja</b>
 <br>
-&copy;2008-2012 <a href="http://eff-bee-eye.de">Alexander Werner</a>
+&copy;2008-2013 <a href="http://eff-bee-eye.de">Alexander Werner</a>
 <br>
-Last Update: July 12th, 2012
+Last Update: May 4th 2013
 <br>
 <b>This script is not officially supported by InterNetX.</b>
 <b>Second-Level TLDs may be disabled on the website due to
