--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Whoisninja : Whois Proxy using InternetX" />
+    <meta name="description" content="Domaincat : Whois Proxy using InternetX as service provider" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Whoisninja</title>
+    <title>Domaincat</title>
   </head>
 
   <body>
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/aw93053/whoisninja">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/aw93053/domaincat">View on GitHub</a>
 
-          <h1 id="project_title">Whoisninja</h1>
-          <h2 id="project_tagline">Whois Proxy using InternetX</h2>
+          <h1 id="project_title">Domaincat</h1>
+          <h2 id="project_tagline">Whois Proxy using InternetX as service provider</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/aw93053/whoisninja/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/aw93053/whoisninja/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/aw93053/domaincat/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/aw93053/domaincat/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -38,7 +38,7 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Whoisninja maintained by <a href="https://github.com/aw93053">aw93053</a></p>
+        <p class="copyright">Domaincat maintained by <a href="https://github.com/aw93053">aw93053</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
