--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>DomainCat</title>
+<title>WhoisPimp</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
 <style type="text/css">
@@ -60,7 +60,7 @@ h1{font-family: Arial,Tahoma,Verdana,sans-serif;font-size:30px}
 
 <span class="footer"><center>
 
-<b>Domaincat</b>
+<b>WhoisPimp</b>
 <br>
 &copy;2008-2013 <a href="http://eff-bee-eye.de">Alexander Werner</a>
 <br>
