made error message box yellow and added accept-charset parameter to form tag

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h1{font-family: Arial,Tahoma,Verdana,sans-serif;font-size:30px}
   </tr>
   <tr> 
     <td class="field"><div align="center"> 
-	<form action="javascript:get(document.getElementById('myform'));" name="myform" id="myform">
+	<form action="javascript:get(document.getElementById('myform'));" name="myform" id="myform" accept-charset="UTF-8">
           <h3>Just type the domain name without the TLD (example: mydomain etc.) and press Enter</h3>
 	
 	<b>Your search will return results for:<br>
@@ -43,14 +43,7 @@ h1{font-family: Arial,Tahoma,Verdana,sans-serif;font-size:30px}
 	.com, .net, .org, .info, .biz, .de, .uk, .nl, .eu, .it, .mobi,
 	<br>,asia, .name, .at, .ch, .es, .me, .nu, .se, .us</b>
 	
-          <p> 
-		    <input name="domainname" id="domainname" type="text" class="domainform">
-	
-	
-	
-	
-	
-          </p>
+          <p><input name="domainname" id="domainname" type="text" class="domainform"></p>
         </form>
       </div></td>
   </tr>
